--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "devDependencies": {
 	"bootstrap": "3.3.7",
 	"angular": "1.5.8",
+    "angular-route": "1.5.8",
 	"jquery-ui": "1.12.1"
   }
 }
